Change postgresqlsearch.enabled to false by default

--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -105,7 +105,7 @@ authgear:
     url: http://localhost:9200
 
   postgresqlsearch:
-    enabled: true
+    enabled: false
     databaseURL: postgres://localhost
     databaseSchema: public
 
