Set SEARCH_DATABASE_URL and SEARCH_DATABASE_SCHEMA

--- a/authgear/templates/authgear-admin-server.yaml
+++ b/authgear/templates/authgear-admin-server.yaml
@@ -62,6 +62,12 @@ spec:
           value: {{ .Values.authgear.databaseSchema | quote }}
         - name: REDIS_URL
           value: {{ .Values.authgear.redisURL | quote }}
+        {{- if .Values.authgear.postgresqlsearch.enabled }}
+        - name: SEARCH_DATABASE_URL
+          value: {{ .Values.authgear.postgresqlsearch.databaseURL | quote }}
+        - name: SEARCH_DATABASE_SCHEMA
+          value: {{ .Values.authgear.postgresqlsearch.databaseSchema | quote }}
+        {{- end }}
         - name: DENO_ENDPOINT
           value: {{ printf "http://%s" (include "authgear.nameDeno" .) | quote }}
         - name: TRUST_PROXY
