--- a/authgear/templates/authgear-deno.yaml
+++ b/authgear/templates/authgear-deno.yaml
@@ -58,6 +58,27 @@ spec:
     name: http
   selector:
     {{- include "authgear.denoSelectorLabels" . | nindent 4 }}
+{{- if .Values.authgear.deno.pdb.enabled}}
+---
+apiVersion: policy/v1
+kind: PodDisruptionBudget
+metadata:
+  name: {{ include "authgear.nameDeno" . | quote }}
+spec:
+  selector:
+    matchLabels:
+      {{- include "authgear.denoSelectorLabels" . | nindent 6 }}
+  {{- if .Values.authgear.deno.pdb.unhealthyPodEvictionPolicy }}
+  unhealthyPodEvictionPolicy: {{ .Values.authgear.deno.pdb.unhealthyPodEvictionPolicy | quote }}
+  {{- end }}
+  {{- if .Values.authgear.deno.pdb.minAvailable }}
+  minAvailable: {{ .Values.authgear.deno.pdb.minAvailable }}
+  {{- else if .Values.authgear.deno.pdb.maxUnavailable }}
+  maxUnavailable: {{ .Values.authgear.deno.pdb.maxUnavailable }}
+  {{- else }}
+  {{ fail ".Values.authgear.deno.pdb has invalid configuration" }}
+  {{- end }}
+{{- end }}
 {{- if .Values.authgear.deno.hpa.enabled }}
 ---
 apiVersion: autoscaling/v2
