--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -47,6 +47,8 @@ authgear:
   ingress:
     enabled: true
     class: nginx
+    annotations:
+      nginx.ingress.kubernetes.io/proxy-body-size: 10m
 
   certManager:
     enabled: true
@@ -66,6 +68,7 @@ authgear:
         enabled: true
         tls:
           enabled: true
+        annotations: {}
       certManager:
         enabled: true
       secretname: ""
@@ -74,6 +77,7 @@ authgear:
         enabled: true
         tls:
           enabled: true
+        annotations: {}
       certManager:
         enabled: true
       secretName: ""
@@ -85,6 +89,7 @@ authgear:
   #    enabled: true
   #    tls:
   #      enabled: true
+  #    annotations: {}
   #  certManager:
   #    enabled: true
   #    issuer:
