--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -205,6 +205,11 @@ authgear:
         storageAccount: ""
         container: ""
         accessKey: ""
+      alibabaCloudOSS:
+        bucketName: ""
+        region: ""
+        accessKeyID: ""
+        secretAccessKey: ""
 
   mainServer:
     image: __replace_me__
@@ -359,6 +364,11 @@ authgear:
         storageAccount: ""
         container: ""
         accessKey: ""
+      alibabaCloudOSS:
+        bucketName: ""
+        region: ""
+        accessKeyID: ""
+        secretAccessKey: ""
 
     serviceAccountName: ""
     nodeSelector: {}
