--- a/authgear/templates/upload-stripe-cronjob.yaml
+++ b/authgear/templates/upload-stripe-cronjob.yaml
@@ -32,6 +32,10 @@ spec:
           topologySpreadConstraints:
           {{- .Values.authgear.portalServer.topologySpreadConstraints | toYaml | nindent 10 }}
           {{- end }}
+          {{- if .Values.authgear.extraVolumes }}
+          volumes:
+          {{- toYaml .Values.authgear.extraVolumes | nindent 10 }}
+          {{- end }}
           containers:
           - name: authgear-upload-stripe-cronjob
             image: {{ .Values.authgear.portalServer.image | quote }}
@@ -46,4 +50,8 @@ spec:
               value: {{ .Values.authgear.stripe.secretKey | quote }}
             - name: SENTRY_DSN
               value: {{ .Values.authgear.sentryDSN | quote }}
+            {{- if .Values.authgear.extraVolumeMounts }}
+            volumeMounts:
+            {{- toYaml .Values.authgear.extraVolumeMounts | nindent 12 }}
+            {{- end }}
 {{ end }}
