--- a/authgear/templates/audit-log-cronjob.yaml
+++ b/authgear/templates/audit-log-cronjob.yaml
@@ -31,6 +31,10 @@ spec:
           topologySpreadConstraints:
           {{- .Values.authgear.mainServer.topologySpreadConstraints | toYaml | nindent 10 }}
           {{- end }}
+          {{- if .Values.authgear.extraVolumes }}
+          volumes:
+          {{- toYaml .Values.authgear.extraVolumes | nindent 10 }}
+          {{- end }}
           containers:
           - name: authgear-audit-log-cronjob
             image: {{ .Values.authgear.mainServer.image | quote }}
@@ -41,5 +45,9 @@ spec:
               value: {{ .Values.authgear.auditLog.databaseURL | quote }}
             - name: DATABASE_SCHEMA
               value: {{ .Values.authgear.auditLog.databaseSchema | quote }}
+            {{- if .Values.authgear.extraVolumeMounts }}
+            volumeMounts:
+            {{- toYaml .Values.authgear.extraVolumeMounts | nindent 12 }}
+            {{- end }}
           restartPolicy: Never
 {{ end }}
