--- a/authgear/templates/redis-cronjob.yaml
+++ b/authgear/templates/redis-cronjob.yaml
@@ -32,6 +32,10 @@ spec:
           topologySpreadConstraints:
           {{- .Values.authgear.mainServer.topologySpreadConstraints | toYaml | nindent 10 }}
           {{- end }}
+          {{- if .Values.authgear.extraVolumes }}
+          volumes:
+          {{- toYaml .Values.authgear.extraVolumes | nindent 10 }}
+          {{- end }}
           containers:
           - name: authgear-redis-rewriteaof-cronjob
             image: {{ .Values.authgear.redisAutoRewriteAOFCronjob.image | quote }}
@@ -42,4 +46,8 @@ spec:
               value: {{ .Values.authgear.redisURL | quote }}
             resources:
               {{- toYaml .Values.authgear.redisAutoRewriteAOFCronjob.resources | nindent 14 }}
+            {{- if .Values.authgear.extraVolumeMounts }}
+            volumeMounts:
+            {{- toYaml .Values.authgear.extraVolumeMounts | nindent 12 }}
+            {{- end }}
 {{- end }}
