--- a/authgear/templates/usage-record-cronjob.yaml
+++ b/authgear/templates/usage-record-cronjob.yaml
@@ -33,6 +33,9 @@ spec:
             configMap:
               defaultMode: 0755
               name: {{ include "authgear.nameUsageRecordCron" . | quote }}
+          {{- if .Values.authgear.extraVolumes }}
+          {{- toYaml .Values.authgear.extraVolumes | nindent 10 }}
+          {{- end }}
           {{- if .Values.authgear.portalServer.nodeSelector }}
           nodeSelector:
             {{- .Values.authgear.portalServer.nodeSelector | toYaml | nindent 12 }}
@@ -64,6 +67,9 @@ spec:
               mountPath: /bin/entrypoint.sh
               readOnly: true
               subPath: entrypoint.sh
+            {{- if .Values.authgear.extraVolumeMounts }}
+            {{- toYaml .Values.authgear.extraVolumeMounts | nindent 12 }}
+            {{- end }}
             env:
             - name: DATABASE_URL
               value: {{ .Values.authgear.databaseURL | quote }}
